test/tests/stages/18_structures/invalid_parse/extra_credit/default_kw_member_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  struct
  identifier(s)
  {
  int
  default
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
